# claude-demo-claim-model

./: .gitignore  CLAUDE.md  README.md  apply_delta.py  index.html  main.py  package-lock.json  package.json  process_event.py  prompt_telemetry.py  pyproject.toml  render_html.py  vertex_client.py
assets/: sample_events.yaml
docs/: tracking-entities.md
models/: claim_event.py  claim_state.py  claim_state_delta.py  entity.py  entity_delta.py  entity_status.py  entity_type.py  event_delta.py  owner.py  process_event_result.py  todo_item.py  todo_item_category.py  todo_item_delta.py  todo_item_status.py  urgency_type.py
output/: report.html
pipeline/: add_event_stage.py  close_cancel_stage.py  open_items_stage.py  run_tool_loop.py  run_workflow.py  tool_context.py  workflow_tools.py
rules/: category_rules.py  compliance_rules.py  employment_rules.py  financial_rules.py  litigation_rules.py  owner_guidance.py  prompt_renderer.py  registry.py  treatment_rules.py  yaml_loader.py
rules/schema/: cancel_rule.py  category_rule_spec.py  close_rule.py  defaults.py  duplication_rule_set.py  open_rules.py  owner_rule.py  sub_category_spec.py  trigger.py
rules/yaml/: compliance.yaml  employment.yaml  (+3 more)
src/: App.css  App.tsx
tests/: conftest.py  test_add_event_stage.py  test_apply_delta.py  test_close_cancel_stage.py  test_open_items_stage.py  test_process_event.py  test_run_workflow.py  test_sub_category_spec.py  test_workflow_prompt_renderer.py  test_workflow_schema.py  test_yaml_rules.py
workflows/: prompt_renderer.py  registry.py  workflow.py  yaml_loader.py
(+18 files in other folders)
